// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformNodesMissingContent lists when list nodes have invalid children should create valid listItem nodes for bulletList with text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "text",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent lists when list nodes have invalid children should create valid listItem nodes for orderedList with text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "text",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent lists when nodes are invalidly empty should create valid filler content for bulletList 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent lists when nodes are invalidly empty should create valid filler content for orderedList 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent tables when nodes are invalidly empty should create valid filler content for tableCell (with attributes) 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  502,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  258,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`transformNodesMissingContent tables when nodes are invalidly empty should create valid filler content for tableCell 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "content": Array [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent tables when nodes are invalidly empty should create valid filler content for tableRow (while alongside valid non-empty tableRows) 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "content": Array [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "content": Array [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "content": Array [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "content": Array [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent tables when nodes are invalidly empty should create valid filler content for tableRow 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "content": Array [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent tables when table nodes have invalid children should create valid tableRow nodes for table with text 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "text",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
